warehouse-service/warehouse-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse-app
  template:
    metadata:
      labels:
        app: warehouse-app
    spec:
      containers:
        - name: warehouse
          image: tramak/warehouse-service:latest
          ports:
            - name: warehouse
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: shop-service-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
      - name: shop-service-persistent-storage
        persistentVolumeClaim:
          claimName: shop-service-pv-claim
