warehouse-service/warehouse-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
spec:
  selector:
    app: warehouse-app
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
