warehouse-service/warehouse-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: warehouse.browser
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: warehouse-service
              port: 
                number: 8080
